--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
+
+  
+
   flutter:
     sdk: flutter
 
@@ -44,10 +48,17 @@ dependencies:
   image_picker: ^0.8.6
   zefyr: ^0.12.0
   provider: ^6.0.5
+  flutter_launcher_icons: ^0.11.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launch_icon"
+  ios: true
+  image_path: "assets/launch_icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -66,6 +77,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  
 
   # To add assets to your application, add an assets section, like this:
   assets:
